utils: Fix permission checks on FreeBSD

/proc is linux specific.

BUG: 500261
(cherry picked from commit 1e7421d6b0e7ac03d1cac8323c5436a867dfc3db)