src/utils/serviceutils.h
@@ -13,6 +13,7 @@
 #include "config-kwin.h"
 // kwin
 #include "effect/globals.h"
+#include "utils/executable_path.h"
 // Qt
 #include <QFileInfo>
 #include <QLoggingCategory>
@@ -66,7 +67,10 @@ static inline QStringList fetchRequestedInterfaces(const QString &executablePath
 
 static inline QStringList fetchRestrictedDBusInterfacesFromPid(const uint pid)
 {
-    const auto executablePath = QFileInfo(QStringLiteral("/proc/%1/exe").arg(pid)).symLinkTarget();
+    const auto executablePath = executablePathFromPid(pid);
+    if (executablePath.isEmpty()) {
+        return QStringList();
+    }
     return fetchProcessServiceField(executablePath, s_dbusRestrictedInterfaceName);
 }
 
